fixing toggle button

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,12 +1,10 @@
 body {
-  background: beige;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  margin-top: 10%;
+  background-color: beige;
 }
 
-/* The switch - the box around the slider */
 .switch {
   position: relative;
   display: inline-block;
@@ -29,7 +27,7 @@ body {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: pink;
+  background-color: rgb(190, 97, 142);
   -webkit-transition: 0.4s;
   transition: 0.4s;
 }
@@ -47,28 +45,15 @@ body {
 }
 
 input:checked + .slider {
-  background-color: #dcbd0c;
+  background-color: #ecf321;
 }
 
 input:focus + .slider {
-  box-shadow: 0 0 1px #dcbd0d;
+  box-shadow: 0 0 1px #ecf321;
 }
 
 input:checked + .slider:before {
   -webkit-transform: translateX(26px);
   -ms-transform: translateX(26px);
   transform: translateX(26px);
-}
-
-/* Rounded sliders */
-.slider.round {
-  border-radius: 34px;
-}
-
-.slider.round:before {
-  border-radius: 50%;
-}
-
-ul {
-  list-style-type: none;
 }
