--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,8 +1,11 @@
+@use "button";
+
 body {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
   background-color: beige;
+  margin-top: 10%;
 }
 
 .container {
@@ -12,59 +15,8 @@ body {
   flex-direction: column;
 }
 
-ul {
+ul,
+li {
   list-style-type: none;
-}
-
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 34px;
-}
-
-/* Hide default HTML checkbox */
-.switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-
-/* The slider */
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgb(190, 97, 142);
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-}
-
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-}
-
-input:checked + .slider {
-  background-color: #ecf321;
-}
-
-input:focus + .slider {
-  box-shadow: 0 0 1px #ecf321;
-}
-
-input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
+  margin-left: none;
 }
