--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,22 +1,46 @@
 @use "button";
+@use "reset";
 
 body {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
   background-color: beige;
-  margin-top: 10%;
+  margin-top: 5%;
 }
 
 .container {
   display: flex;
-  justify-content: space-around;
   flex-wrap: wrap;
   flex-direction: column;
+  width: 390px;
 }
 
-ul,
-li {
+ul {
   list-style-type: none;
-  margin-left: none;
+  padding: 0;
+}
+
+li {
+  display: flex;
+  margin-bottom: 1em;
+  justify-content: space-between;
+  font-size: 1.1em;
+  background-color: beige;
+}
+
+li:hover {
+  background-color: #ddc7a0;
+  cursor: pointer;
+}
+
+h1,
+h2 {
+  display: flex;
+  justify-content: center;
+  font-size: 2em;
+}
+
+.completed {
+  text-decoration: line-through;
 }
