fixing final things

--- a/src/scss/_button.scss
+++ b/src/scss/_button.scss
@@ -36,15 +36,23 @@
 }
 
 input:checked + .slider {
-  background-color: #ecf321;
+  background-color: #8be588;
 }
 
 input:focus + .slider {
-  box-shadow: 0 0 1px #ecf321;
+  box-shadow: 0 0 1px #8be588;
 }
 
 input:checked + .slider:before {
   -webkit-transform: translateX(26px);
   -ms-transform: translateX(26px);
   transform: translateX(26px);
+}
+
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
