--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,6 +3,7 @@
 
 body {
   display: flex;
+  padding: 40px 0px 0px 0px;
   flex-wrap: wrap;
   justify-content: space-around;
   background-color: beige;
